##Text encoding: utf-8

2008-09-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.92).
	* libs/gcp/fragment.h: API documentation work.
	* libs/gcp/text.h: ditto.
	* programs/3d/application.cc: fixed color background from
	command line.
	* docs/help/3d/*: gchem3d help work.

2008-09-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/Makefile.am: don't forget the glade file in the
	tarball.

2008-09-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: add back intltool-*.in to EXTRA_DIST (needed
	by intltool 0.37.1).

2008-09-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: downgrade the intltool requirement to 0.37.1.
	* docs/help/paint/*: update gchempaint help for 0.10.

2008-09-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/loaders/cdx/cdx.cc: fixed compilation on ppc and other
	big-endian machines.

2008-09-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/text/Makefile.am: fix fontsel.glade installation.

2008-09-07  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.h: API documentation work.
	* libs/gcp/document.h: ditto.
	* libs/gcp/fontsel.h: ditto.
	* libs/gcp/fragment-residue.h: ditto.
	* libs/gcp/fragment.h: ditto.
	* libs/gcp/residue.h: ditto.
	* libs/gcp/view.h: ditto.
	* libs/gcu/chemistry.h: ditto.
	* libs/gcu/gtkperiodic.h: ditto.

2008-09-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: post release version bump (0.9.91).

2008-09-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* autogen.sh: reverted Daniels changes about docs links for now.
	* configure.ac: ditto.

2008-09-06  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/residue.cc: no need to care about the delete button for
	read-only residues.
	* plugins/paint/residues/residues-dlg.cc: ditto.
	* programs/calc/gchemcalc.cc: fixed typo.
	* programs/spectra/window.cc: ditto.
	* programs/table/gchemtable-data-allocator.cc: ditto.
